# apertium-tur

./: .gitattributes  .gitignore  2285aa  2285ab  2285ac  2285ad  2285ae  2285af  2285ag  2285ah  2285ai  2285aj  2285ak  2285al  2285am  2285an  2285ao  2285ap  2285aq  2285ar  2285as  2285at  2285au  2285av  2285aw  AUTHORS  Makefile  Makefile.am  README  TODO  apertium-tur-1.0.pc.in  apertium-tur.pc.in  apertium-tur.post-tur.dix  apertium-tur.tur.lexc  apertium-tur.tur.rlx  apertium-tur.tur.twol  autogen.sh  configure.ac  coveragemac.sh  coveragescrhips  (+17 more)
.circleci/: config.yml  cov.sh
dev/: 25072012-apertium-tur.tur.lexc  25072012-apertium-tur.tur.rlx  VERBS-scraps  adv  adv.checked  adverbs.lex  checked.xae  countstems.sh  miscategorised.lexc  numerals.txt  parallel  postpositions.txt  proof-lexicon.sh  replace-old-verbs.regex  spellrelax.twol  test-prefix.sh  tr-cv-phrases.txt  turkish.py  unknown  verb-morph.lexc  verbmorph.dot
dev/verbs/: Clean_FILE  Clean_FILE.lexc  Makefile  VERBS-scraps.lexc  test-yap.txt  verbs.yaml
eval/: Makefile  ref.1000.txt  src.1000.txt
lexicon/: adjectives  adverbs  nouns
speller/: index.xml
test/: aor-phon-gen-generator-expected.txt  aor-phon-gen-generator-gold.txt  aor-phon-gen-input.txt  aor-phon-input.txt  aor-phon-morph-expected.txt  aor-phon-morph-gold.txt  copulas-gen-generator-expected.txt  copulas-gen-generator-gold.txt  copulas-gen-input.txt  copulas-input.txt  copulas-morph-expected.txt  copulas-morph-gold.txt  epenthesis-gen-generator-expected.txt  epenthesis-gen-generator-gold.txt  epenthesis-gen-input.txt  epenthesis-input.txt  epenthesis-morph-expected.txt  epenthesis-morph-gold.txt  etmek-gen-generator-expected.txt  etmek-gen-generator-gold.txt  etmek-gen-input.txt  etmek-input.txt  etmek-morph-expected.txt  etmek-morph-gold.txt  irreg-vowelharmony-gen-generator-expected.txt  irreg-vowelharmony-gen-generator-gold.txt  irreg-vowelharmony-gen-input.txt  irreg-vowelharmony-input.txt  irreg-vowelharmony-morph-expected.txt  irreg-vowelharmony-morph-gold.txt  nouns-misc-gen-generator-expected.txt  nouns-misc-gen-generator-gold.txt  nouns-misc-gen-input.txt  nouns-misc-input.txt  nouns-misc-morph-expected.txt  nouns-misc-morph-gold.txt  np-misc-gen-generator-expected.txt  np-misc-gen-generator-gold.txt  np-misc-gen-input.txt  np-misc-input.txt  (+39 more)
tests/: aor-phon.yaml  copulas.yaml  epenthesis.yaml  etmek.yaml  irreg-vowelharmony.yaml  nouns-misc.yaml  np-misc.yaml  numeral-misc.yaml  qst-position.yaml  verb-classes.yaml  verbs-misc.yaml  verbs-passive.yaml  voicing.yaml
tests/morphotactics/: Makefile
tests/vocabulary/: input.csv
